# pyside-setup

./: .gitreview  CMakeLists.txt  README.md  README.pyside6.md  README.pyside6_addons.md  README.pyside6_essentials.md  README.pyside6_examples.md  README.shiboken6-generator.md  SECURITY.md  create_wheels.py  requirements-coin.txt  requirements-doc.txt  requirements.txt
sources/pyside6/: .cmake.conf  CMakeLists.txt
sources/pyside6/PySide6/: CMakeLists.txt  __init__.py.in  _config.py.in  pyside6_global.h  pysideqtesttouch.h  pysidewtypes.h  qiopipe.h  qpydesignerextensions.h  qpyqmlparserstatus.h  qpyqmlpropertyvaluesource.h  qpytextobject.cpp  qpytextobject.h  qtcorehelper.h  qtdatavisualization_helper.h  qtdbushelper.h  qtgraphs_helper.h  qtguihelper.h
sources/pyside6/cmake/: PySideHelpers.cmake  PySideSetup.cmake
sources/pyside6/doc/: CMakeLists.txt  QtWebEngine.rst  additionaldocs.lst  api.rst  conf.py.in  contents.rst  gettingstarted.rst  index.rst  modules.rst  qtattributionsscannertorst.py
sources/pyside6/libpyside/: CMakeLists.txt  PySide6Config-spec.cmake.in  class_property.cpp  class_property.h  dynamicqmetaobject.cpp  dynamicqmetaobject.h  dynamicslot.cpp  dynamicslot_p.h  feature_select.cpp  feature_select.h  pyobjectwrapper.cpp  pyobjectwrapper.h  pyside.cpp  pyside.h  pyside6.pc.in  pyside_numpy.cpp  pyside_numpy.h  pyside_p.h  pysideclassdecorator.cpp  pysideclassdecorator_p.h  pysideclassinfo.cpp  pysideclassinfo.h  pysideclassinfo_p.h  pysidecleanup.h  pysideglobals.cpp  pysideglobals_p.h  pysideinit.h  pysidelogging_p.h  pysidemacros.h  pysidemetafunction.cpp  pysidemetafunction.h  pysidemetafunction_p.h  pysidemetatype.h  pysideproperty.cpp  pysideproperty.h  pysideproperty_p.h  pysidepropertybase_p.h  pysideqapp.h  pysideqenum.cpp  pysideqenum.h  (+22 more)
sources/pyside6/libpysideqml/: CMakeLists.txt  pysideqml.cpp  pysideqml.h  pysideqmlattached.cpp  pysideqmlattached.h  pysideqmlattached_p.h  pysideqmlextended.cpp  pysideqmlextended_p.h  pysideqmlforeign.cpp  pysideqmlforeign_p.h  pysideqmllistproperty.cpp  pysideqmllistproperty_p.h  pysideqmllistpropertymixin.cpp  pysideqmllistpropertymixin.h  pysideqmlmacros.h  pysideqmlmetacallerror.cpp  pysideqmlmetacallerror_p.h  pysideqmlnamedelement.cpp  pysideqmlnamedelement_p.h  pysideqmlregistertype.cpp  pysideqmlregistertype.h  pysideqmlregistertype_p.h  pysideqmltypeinfo.cpp  pysideqmltypeinfo_p.h  pysideqmluncreatable.cpp  pysideqmluncreatable.h
sources/pyside6/libpysideremoteobjects/: CMakeLists.txt  pysidecapsulemethod.cpp  pysidecapsulemethod_p.h  pysidedynamicclass.cpp  pysidedynamicclass_p.h  pysidedynamiccommon.cpp  pysidedynamiccommon_p.h  pysidedynamicenum.cpp  pysidedynamicenum_p.h  pysidedynamicpod.cpp  pysidedynamicpod_p.h  pysideremoteobjects.h  pysiderephandler.cpp  pysiderephandler_p.h
sources/pyside6/qtexampleicons/: CMakeLists.txt
sources/pyside6/tests/: CMakeLists.txt  init_paths.py
sources/shiboken6/: .cmake.conf  CMakeLists.txt
sources/shiboken6/ApiExtractor/: CMakeLists.txt  abstractmetabuilder.cpp  abstractmetabuilder.h  abstractmetabuilder_p.h  abstractmetaenum.cpp  abstractmetaenum.h  abstractmetafield.cpp  abstractmetafunction.cpp  abstractmetafunction.h  abstractmetalang.cpp  abstractmetalang.h  abstractmetalang_enums.h  abstractmetalang_typedefs.h  abstractmetatype.cpp  abstractmetatype.h  addedfunction.cpp  addedfunction.h  anystringview_helpers.cpp  apiextractor.cpp  apiextractor.h  apiextractorresult.h  classdocumentation.cpp  classdocumentation.h  codesnip.cpp  codesnip.h  codesniphelpers.cpp  codesniphelpers.h  complextypeentry.h  conditionalstreamreader.cpp  conditionalstreamreader.h  configurabletypeentry.h  cpptypeentry.h  customconversion.cpp  customconversion.h  customtypenentry.h  debughelpers_p.h  dependency.h  docparser.cpp  documentation.h  documentation_enums.h  (+41 more)
sources/shiboken6/cmake/: ShibokenHelpers.cmake  ShibokenSetup.cmake
sources/shiboken6/data/: CMakeLists.txt  Shiboken6Config-spec.cmake.in  Shiboken6ToolsConfig.cmake.in  shiboken6.pc.in
sources/shiboken6/doc/: CMakeLists.txt  considerations.rst  gettingstarted.rst  index.rst  shibokengenerator.rst  shibokenmodule.rst  typesystem.rst  typesystem_arguments.rst  typesystem_codeinjection.rst  typesystem_conversionrule.rst  typesystem_converters.rst  typesystem_documentation.rst  typesystem_manipulating_objects.rst  typesystem_objectvalue.rst  typesystem_overloads.rst  typesystem_specialfunctions.rst  typesystem_specifying_types.rst  typesystem_templates.rst  typesystem_variables.rst
sources/shiboken6/generator/: CMakeLists.txt  defaultvalue.h  generator.cpp  generator.h  generatorcontext.h  main.cpp
sources/shiboken6/libshiboken/: CMakeLists.txt  autodecref.h  basewrapper.cpp  basewrapper.h  basewrapper_p.h  bindingmanager.cpp  bindingmanager.h  bufferprocs_py37.cpp  bufferprocs_py37.h  debugfreehook.cpp  debugfreehook.h  gilstate.cpp  gilstate.h  helper.cpp  helper.h  pep384ext.cpp  pep384ext.h  pep384impl.cpp  pep384impl.h  pyobjectholder.h  qt_attribution.json  sbkarrayconverter.cpp  sbkarrayconverter.h  sbkarrayconverter_p.h  sbkbindingutils.cpp  sbkbindingutils.h  sbkcontainer.cpp  sbkcontainer.h  sbkconverter.cpp  sbkconverter.h  sbkconverter_p.h  sbkcppstring.cpp  sbkcppstring.h  sbkcpptonumpy.cpp  sbkcpptonumpy.h  sbkdestructorentry.h  sbkenum.cpp  sbkenum.h  sbkenum_p.h  sbkerrors.cpp  (+34 more)
sources/shiboken6/shibokenmodule/: _config.py.in  shibokenmodule.cpp
sources/shiboken6/tests/: CMakeLists.txt
sources/shiboken6_generator/: CMakeLists.txt
sources/shiboken6_generator/ApiExtractor/: CMakeLists.txt  abstractmetaargument.cpp  abstractmetaargument.h  abstractmetabuilder.cpp  abstractmetabuilder_p.h  abstractmetabuilder_testutil.cpp  abstractmetabuilder_testutil.h  abstractmetaenum.cpp  abstractmetafield.cpp  abstractmetafield.h  abstractmetafunction.cpp  abstractmetafunction.h  abstractmetalang.cpp  abstractmetalang.h  abstractmetalang_enums.h  abstractmetatype.cpp  addedfunction.cpp  addedfunction.h  addedfunction_p.h  anystringview_helpers.h  apiextractor.cpp  apiextractorflags.h  (+58 more)
(+1052 files in other folders)
